# github_linter

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.MD  SECURITY.md  biome.json  dprint.json  github_linter.example.json  github_linter.json  justfile  mypy.ini  pyproject.toml  run_mypy.sh  run_pylint.sh  run_web.sh  selftest.sh  test_dependabot.py  test_generic.py  test_hcl2.py  test_pyproject.py  test_repo_search.py  test_web.py
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: bandit.yml  build_container.yml  codeql-analysis.yml  codeql-analysis.yml.disabled  dependabot_auto_merge.yml  dependency_review.yml  mypy.yml  pylint.yml  pytest.yml  shellcheck.yml  testing.yml
github_linter/: __init__.py  __main__.py  custom_types.py  defaults.py  dependabot.py  exceptions.py  generic_tests.py  loaders.py  pylintrc.py  pyproject.py  repolinter.py  utils.py  workflow_stats.py
github_linter/docs/: terraform.md
github_linter/fixes/dependabot/: dependabot_auto_merge.yml
github_linter/fixes/docs/: CONTRIBUTING.md
github_linter/fixes/github_actions/: __init__.py  dependency_review.yml
github_linter/fixes/github_actions/templates/Dockerfile/: build_container.yml
github_linter/fixes/github_actions/templates/Python/: bandit.yml  mypy.yml  pylint.yml  pytest.yml
github_linter/fixes/github_actions/templates/Rust/: clippy.yml  rust_test.yml
github_linter/fixes/github_actions/templates/Shell/: shellcheck.yml
github_linter/fixes/homebrew/: homebrew_check_latest_release.sh  homebrew_check_updates.yml
github_linter/fixes/mkdocs/: mkdocs.yml
github_linter/fixes/pylintrc/: pylintrc
github_linter/fixes/python/: placeholder_test_nothing.py
github_linter/fixes/security_md/: SECURITY.md
github_linter/tests/: __init__.py  branch_protection.py  codeowners.py  dependabot.py  docs.py  generic.py  github_actions.py  homebrew.py  issues.py  mkdocs.py  pylintrc.py  pylintrc.py.disabled  pyproject.py  python.py  security_md.py  template.test  terraform.py  testing.py
github_linter/tests/dependabot/: __init__.py  constants.py  types.py  utils.py
github_linter/tests/mkdocs/: __init__.py
github_linter/utils/: __init__.py  pages.py
github_linter/web/: __init__.py  __main__.py  github_linter.js  index.html
github_linter/web/css/: github-linter.css
github_linter/web/templates/: basetemplate.html  index.html  index.vue
tests/: test_branch_protection.py  test_dependabot.py  test_generic.py  test_github_data.py  test_hcl2.py  test_pyproject.py  test_python.py  test_repo_search.py  test_web.py  utils.py
