
[project]
version = "0.0.5"
name = "github_linter"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"

keywords = ["github"]

requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "click>=8.1.8",
    "fastapi>=0.115.6",
    "github3-py>=4.0.1",
    "greenlet>=3.1.1",
    "jinja2>=3.1.5",
    "json5>=0.10.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.5",
    "pygithub>=2.5.0",
    "python-hcl2>=5.1.1",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruyaml>=0.91.0",
    "semver>=3.0.2",
    "sqlalchemy>=2.0.37",
    "tomli>=2.2.1",
    "tomli-w>=1.1.0",
    "uvicorn>=0.34.0",
    "wildcard-matcher>=0.0.3",
]

[project.urls]
Home = "https://github.com/yaleman/github_linter"

[project.optional-dependencies]
dev = ["flit", "pytest", "pylint", "mypy", "types-PyYAML", "types-pytz"]

[project.scripts]
"github-linter" = 'github_linter.__main__:cli'
"github-linter-web" = 'github_linter.web.__main__:cli'

[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511,consider-using-dict-items,duplicate-code"
# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[tool.ruff]
line-length = 200
exclude = ["W0511", "consider-using-dict-items", "duplicate-code"]
# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
# extension-pkg-whitelist="pydantic"
# load-plugins="pylint_pydantic"

[tool.pytest.ini_options]
markers = ["network: things which need authentication, '-m \"not network\"'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
