
[project]
version = "0.0.6"
name = "github_linter"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"

keywords = ["github"]

requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "click>=8.4.1",
    "fastapi>=0.121.2",
    "github3-py>=4.0.1",
    "greenlet>=3.4.0",
    "jinja2>=3.1.6",
    "json5>=0.14.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pygithub>=2.5.0",
    "python-hcl2>=8.1.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ruyaml>=0.91.0",
    "semver>=3.0.4",
    "sqlalchemy>=2.0.50",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.47.0",
    "wildcard-matcher>=0.0.3",
]

[project.urls]
Home = "https://github.com/yaleman/github_linter"

[project.optional-dependencies]
dev = ["flit", "pytest", "mypy", "types-PyYAML", "types-pytz"]

[project.scripts]
"github-linter" = 'github_linter.__main__:cli'
"github-linter-web" = 'github_linter.web.__main__:cli'


[tool.ruff]
line-length = 200
exclude = ["W0511", "consider-using-dict-items", "duplicate-code"]

[tool.pytest.ini_options]
markers = ["network: things which need authentication, '-m \"not network\"'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "flit>=3.12.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.38",
    "types-pytz>=2024.2.0.20241221",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260513",
]
